--- a/icons2.html
+++ b/icons2.html
@@ -4,8 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NAV-BAR1</title>
+    <title>NAV-BAR 2</title>
+    <!-- Bootstrap Icons CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #111;
+        }
+
         .container {
             color: white;
             background-color: gray;
@@ -15,6 +23,7 @@
             flex-wrap: wrap;
             gap: 20px;
             padding: 10px;
+            align-items: center;
         }
 
         .HOME,
@@ -40,14 +49,34 @@
             cursor: pointer;
         }
 
-        .harish {
+        .narendra {
             margin-left: auto;
+            display: flex;
+            align-items: center;
+            gap: 10px;
         }
 
-        .harish input[type="text"] {
-            padding: 8px;
+        .narendra input[type="text"] {
+            padding: 8px 10px;
             border-radius: 4px;
             border: 1px solid white;
+            background-color: #222;
+            color: white;
+        }
+
+        .search-icon {
+            font-size: 20px;
+            color: white;
+            background-color: #333;
+            padding: 8px;
+            border-radius: 50%;
+            cursor: pointer;
+            transition: transform 0.2s, background-color 0.2s;
+        }
+
+        .search-icon:hover {
+            background-color: #555;
+            transform: scale(1.1);
         }
     </style>
 </head>
@@ -68,9 +97,9 @@
             </select>
         </div>
 
-        <div class="harish">
+        <div class="narendra">
             <input type="text" name="search" placeholder="Search">
-             <i class="fas fa-search"></i>
+            <i class="bi bi-search search-icon"></i>
         </div>
     </div>
 </body>
